--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
     "start": "expo start --web --port 19000",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android --port 19000",
-    "ios": "expo start --ios",
+    "ios": "expo run:ios",
     "web": "expo start --web --port 19000",
     "lint": "expo lint"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
-    "@react-navigation/drawer": "^7.5.8",
+    "@react-navigation/drawer": "^7.5.0",
     "@react-navigation/elements": "^2.6.3",
-    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native": "^7.1.8",
     "expo": "~54.0.12",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
@@ -44,6 +45,7 @@
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "@types/react-native-sqlite-storage": "^6.0.5",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "typescript": "~5.9.2"
