--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "react-devtools": "^7.0.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-modal": "^14.0.0-rc.1",
+    "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
